Operadores.txt
Aritméticos
Atribuição
Relacionais
Lógicos
Ternário


> 5 + 2
7
> 5-2
3
> 5*2
10
> 5/2
2.5
> 5%2
1
> 5**2
25
> (5 + 3) / 2
4
> var n = 3
undefined
> n += 5
8
> n++
8
> n
9
> --n
8
> n
8
> ++n
9
> 2 == 2
true
> 2 > 3
false
> 2 > 1 && 1 < 3
true
> 5 > 6 || 7 < 9
true
> 10 > 5
true
> 5 === '5'
false
> 5 === 5
true
> 2 !> 3
2 !> 3
  ^   

Uncaught SyntaxError: Unexpected token '!'
> 2 != 3
true
> var media = 5.5
undefined
> media > 7 ? 'Aprovado': 'Reprovado'
'Reprovado'
> media = 8
8
> media > 7 ? 'Aprovado': 'Reprovado'
'Aprovado'
> var x = 8
undefined
> var res = x % 2 == 0? 5: 9
undefined
> res
5
> var idade = 19
undefined
> var r = idade > 18 ? 'Maior': 'Menor'
undefined
> r
'Maior'
>